[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://MainMenu/2p.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/3p.png" type="Texture" id=3]
[ext_resource path="res://MainMenu/4p.png" type="Texture" id=4]
[ext_resource path="res://MainMenu/MultiplayerButton.png" type="Texture" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Btns" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="2P" type="TextureButton" parent="Btns"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 177.0
margin_top = 250.0
margin_right = 369.0
margin_bottom = 442.0
rect_pivot_offset = Vector2( 153, 90 )
texture_normal = ExtResource( 2 )
expand = true

[node name="3P" type="TextureButton" parent="Btns"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 416.956
margin_top = 250.0
margin_right = 608.956
margin_bottom = 442.0
rect_pivot_offset = Vector2( 153, 90 )
texture_normal = ExtResource( 3 )
expand = true

[node name="4P" type="TextureButton" parent="Btns"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 674.0
margin_top = 250.0
margin_right = 866.0
margin_bottom = 442.0
rect_pivot_offset = Vector2( 153, 90 )
texture_normal = ExtResource( 4 )
expand = true

[node name="MP Button" type="TextureButton" parent="Btns"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 920.228
margin_top = 250.0
margin_right = 1112.23
margin_bottom = 442.0
rect_pivot_offset = Vector2( 153, 90 )
texture_normal = ExtResource( 5 )
expand = true

[connection signal="button_down" from="Btns/2P" to="." method="_on_2P_button_down"]
[connection signal="button_down" from="Btns/3P" to="." method="_on_3P_button_down"]
[connection signal="button_down" from="Btns/4P" to="." method="_on_4P_button_down"]
[connection signal="button_down" from="Btns/MP Button" to="." method="_on_MP_Button_button_down"]
